refactor: migrate to Java 1.8