@@ -1,5 +1,6 @@
 package io.github.leawind.inventory.just;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
@@ -11,7 +12,7 @@ import java.util.function.Supplier;
  * @see <a href="https://doc.rust-lang.org/core/option/enum.Option.html">`Option` on
  *     doc.rust-lang.org</a>
  */
-public sealed interface Option<T> {
+public interface Option<T> {
 
   @SuppressWarnings("unchecked")
   static <T> Option<T> some(T value) {
@@ -177,7 +178,7 @@ public sealed interface Option<T> {
 
     @Override
     public Iterable<T> iter() {
-      return List.of(value);
+      return Collections.singletonList(value);
     }
 
     @Override
@@ -208,6 +209,19 @@ public sealed interface Option<T> {
     @Override
     public Option<T> xor(Option<T> optb) {
       return optb.isSome() ? none() : this;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+      if (this == o) return true;
+      if (!(o instanceof Some)) return false;
+      Some<?> some = (Some<?>) o;
+      return java.util.Objects.equals(value, some.value);
+    }
+
+    @Override
+    public int hashCode() {
+      return java.util.Objects.hash(value);
     }
   }
 
@@ -296,7 +310,7 @@ public sealed interface Option<T> {
 
     @Override
     public Iterable<T> iter() {
-      return List.of();
+      return Collections.emptyList();
     }
 
     @Override
@@ -330,11 +344,11 @@ public sealed interface Option<T> {
     }
   }
 
-  private static JustError unwrapFailed() {
+  static JustError unwrapFailed() {
     return JustError.panic("called `Option#unwrap()` on a `None` value");
   }
 
-  private static JustError expectFailed(String msg) {
+  static JustError expectFailed(String msg) {
     return JustError.panic(msg);
   }
 }
